<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PT_Widget</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="update">새로고침</string>
    <string name="ranking">----</string>
    <string name="artist">----</string>
    <string name="album">----</string>
    <string name="song">----</string>
    <string name="next">다음</string>
    <string name="previous">전</string>

</resources>
